--- a/ChatMessRyb/ChatMessRyb.csproj
+++ b/ChatMessRyb/ChatMessRyb.csproj
@@ -110,6 +110,9 @@
     <Compile Include="Windows\ChatWindow.xaml.cs">
       <DependentUpon>ChatWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Windows\SearchForColleaguesWindow.xaml.cs">
+      <DependentUpon>SearchForColleaguesWindow.xaml</DependentUpon>
+    </Compile>
     <Page Include="Windows\AuthWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -119,6 +122,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Windows\ChatWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\SearchForColleaguesWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
